--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <b>THIS IS AN EDIT THAT THEY WILL LOVE...</b>
 <br>
 
-<h2>Yo this is the new update from 2/19!!!!</h2>
+<h2>TABLE 2 WEBAPP AZURE</h2>
 
 <marquee>This is blinking text I think</marquee>
+
