--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <h2>Welcome to Azure !!! </H2>
 <br>
-<b>THIS IS AN EDIT THAT THEY WILL LOVE...</b>
+<b>RRRR DID IT ...</b>
 <br>
 
-<h2>TABLE 2 WEBAPP AZURE</h2>
+<h2>TABLE 2</h2>
 
 <marquee>This is blinking text I think</marquee>
 
